# hloc_retrieval_test

./: .flake8  .gitignore  .isort.cfg  .pylintrc  Makefile  README.md  build_graph_map.py  generate_db_feature.py  generate_full_map_object_detection.py  generate_full_map_siamese_embedding.py  generate_full_map_siamese_embedding_realworld.py  generate_full_map_single_view_double_embedding.py  generate_graph_map.py  generate_grid_map.py  generate_hloc_feature.py  generate_map_observation.py  generate_map_observation_single_view.py  generate_siamese_dataset.py  generate_siamese_embedding.py  generate_siamese_embedding_realworld.py  generate_similarity_matrix.py  generate_sptm_dataset.py  note  pytest.ini  requirements.txt  rrt.py  run_build_graph_map.py  run_build_graph_map_from_sample.py  run_data_generation.py  run_dataset_display.py  run_draw_trajectory.py  run_full_map_localization.py  run_full_map_localization_netvlad.py  run_full_map_localization_real_view.py  run_full_map_localization_realworld.py  run_full_map_localization_realworld_netvlad.py  run_full_map_localization_single_view.py  run_full_map_matching_relocalization.py  run_full_map_matching_relocalization_single_view.py  run_full_map_orb_relocalization.py  (+27 more)
algorithms/: constants.py  resnet.py  sptm.py  sptm_utils.py  yolo.py
config/: algorithm_config.py  concat_fourview_69FOV_HD.py  concat_fourview_90FOV.py  (+15 more)
room_segmentation/: CMakeLists.txt  main.cpp
room_segmentation/include/ipa_room_segmentation/: abstract_voronoi_segmentation.h  timer.h  voronoi_segmentation.h
room_segmentation/lib/: CMakeLists.txt
(+59 files in other folders)
